--- a/INLABMA/inst/not_a_vignette/biblio.bib
+++ b/INLABMA/inst/not_a_vignette/biblio.bib
@@ -210,8 +210,7 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
   title		= {{Using integrated nested Laplace approximations for the
 		  evaluation of veterinary surveillance data from
 		  Switzerland: a case-study}},
-  journal	= {{JOURNAL OF THE ROYAL STATISTICAL SOCIETY SERIES C-APPLIED
-		  STATISTICS}},
+  journal	= {Journal of the Royal Statistical Society C}, 
   year		= {{2011}},
   volume	= {{60}},
   number	= {{2}},
@@ -1956,13 +1955,6 @@ abstract = {When fitting complex hierarchical disease mapping models, it can be 
 }
 
 
-@book{Cressie:1993,
-   author={N. A. C. Cressie},
-   title={Statistics for Spatial Data},
-   year={1993},
-   publisher={New York:Wiley}
-}
-
 
 @book{Banerjeeetal:2003,
    author={Sudipto Banerjee and Alan E. Gelfand and Bradley P. Carlin},
@@ -2298,4 +2290,14 @@ Paulo J. Ribeiro Jr & Peter J. Diggle geoR: a package for
    url={http://www.BayesX.org/}
 }
 
+
+
+@article{GomezRubioetal:2014,
+   author={Virgilio G\'omez-Rubio and Roger S. Bivand and H\oavard Rue},
+   title={Estimating Spatial Econometrics Models with Integrated Nested Laplace
+Approximation},
+   year={2014},
+   journal ={Submitted for publication},
+   pages={}
+}
 
